add flags for jp2k